--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -81,7 +81,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="pull-left">
-                <button type="button" class="btn btn-sm btn-primary">Beneficiários</button>
+                <button type="button" class="btn btn-sm btn-primary" id="Beneficiarios">Beneficiários</button>
             </div>
             <div class="pull-right">
                 <button type="submit" class="btn btn-sm btn-success">Salvar</button>
