--- a/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
@@ -5,6 +5,7 @@
 @section scripts{
     <script>
         var urlPost = '@Url.Action("Incluir", "Cliente", new { area = "" })';
+        var urlBeneficiarios = '@Url.Action("Get", "Beneficiario", new { id = 0 })'
     </script>
     @Scripts.Render("~/bundles/clientes")
 }
